# AirlineDelay

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
Models/: logistic_regression_model.pkl
Slides/: 2-TrainingLogisticRegression.slides.html  3-TrainingRandomForrest.slides.html  4-ModelComparison.slides.html
XAI/: README.md
XAI/.devcontainer/: devcontainer.json
XAI/src/: XAI.ipynb  dashboard.py  xaipreprocessing.py
app/: app.py  predict.py
app/frontend/: index.html  result.html
data/: airlines_delay_cleaned_unique_airline.csv  airlines_delay_cleaned_unique_airport.csv
frontend/: index.html
src/: 1-AirlineDelay.ipynb  1-AirlineDelay.slides.html  2-TrainingLogisticRegression.ipynb  3-TrainingRandomForrest.ipynb  4-ModelComparison.ipynb  5-XAI.ipynb  AirlineDelay slides.html  AirlineDelay.ipynb  CleanedUniqueData.ipynb  TrainingLogisticRegression.ipynb  TrainingRandomForrest.ipynb  app.py  test.ipynb
