[tool.poetry]
name = "Airline Delay"
version = "0.1.0"
description = "Analysis of airline dataset and training of a model to predict delays"
authors = ["Petar Mladenov <mladepet@students.zhaw.ch>, Sven Chen <chensve1@students.zhaw.ch>, Luis Pinheiro<pinhelui@students.zhaw.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13"
matplotlib = "^3.7.1"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pylint = "^2.16.3"
mypy = "^1.0.1"
black = "^23.1.0"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
